--- a/hugo.toml
+++ b/hugo.toml
@@ -31,6 +31,7 @@ disableRSS     = false
 disableSitemap = false
 disable404     = false
 disableHugoGeneratorInject = false
+justifyContent = true
 
 [permalinks]
   posts = "/posts/:year/:month/:title/"
@@ -41,7 +42,7 @@ disableHugoGeneratorInject = false
   dateformNumTime = "2006-01-02 15:04"
 
   # Subtitle for home
-  homeSubtitle = "Santacodes' Blog Site"
+  homeSubtitle = "Hello there! I'm Santhosh Sundaram, a passionate undergrad student, deeply immersed in the fascinating world of programming and computer science!"
   # Set disableReadOtherPosts to true in order to hide the links to other posts.
   disableReadOtherPosts = false
 
@@ -52,9 +53,14 @@ disableHugoGeneratorInject = false
   enableGlobalLanguageMenu = false
 
   # Metadata mostly used in document's head
-  description = "My new homepage or blog"
+  description = "My personal blog and portfolio site"
   keywords = "homepage, blog"
   images = [""]
+
+  [params.portrait]
+    path     = "https://avatars.githubusercontent.com/u/52504160?v=4"
+    alt      = "Portrait"
+    maxWidth = "300px"
 
   [[params.social]]
   name = "github"
