--- a/hugo.toml
+++ b/hugo.toml
@@ -7,7 +7,7 @@ PygmentsStyle = "monokai"
 
 paginate  = 10
 rssLimit  = 10  # Maximum number of items in the RSS feed.
-copyright = "Creative Commons Attribution-NonCommercial 4.0 International License." # This message is only used by the RSS template.
+copyright = "MIT License" # This message is only used by the RSS template.
 
 # googleAnalytics = ""
 # disqusShortname = ""
